plugins/opa/examples-rego-v1/ingress-host-conflict/test-manifest/ingress.yaml
# This manifest is used to test the accompanying OPA policy.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  namespace: default
spec:
  rules:
  # This is the hostname the policy will check against.
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
